# mvx-game-sc-testing

interactor/: Cargo.toml  state.toml  takeaways.md
interactor/src/: interactor_main.rs
python-testing/: mvx-game-sc.abi.json  tests.ipynb
