[package]
name = "rust-interactor"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[[bin]]
name = "rust-interact"
path = "src/interactor_main.rs"

[dependencies.mvx-game-sc]
path = ".."

[dependencies.multiversx-sc-snippets]
version = "0.52.3"

[dependencies.multiversx-sc]
version = "0.52.3"

[dependencies]
async-std= "1.12.0"
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.6"

# [workspace]

